--- a/client/static/index.html
+++ b/client/static/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>rpgdle</title>
+        <script src="https://cdn.jsdelivr.net/npm/@msgpack/msgpack@3.1.1/dist.umd/msgpack.min.js"></script>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
