--- a/client/static/index.html
+++ b/client/static/index.html
@@ -7,6 +7,7 @@
         <title>rpgdle</title>
         <script src="https://cdn.jsdelivr.net/npm/@msgpack/msgpack@3.1.1/dist.umd/msgpack.min.js"></script>
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     </head>
     <body>
         <div id="container">
