--- a/client/static/index.html
+++ b/client/static/index.html
@@ -14,6 +14,9 @@
             <div id="canvas-container">
                 <canvas id="game"></canvas>
             </div>
+            <div id="chat-container">
+                <input type="text", id="chatbox", name="chatbox">
+            </div>
         </div>
         <script src="./app.js" type="module"></script>
     </body>
